# ComfyUI-Krea-Palette-Tools

./: .gitignore  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt
nodes/: palette_extractor.py  palette_style_reference.py  palette_to_prompt_text.py
tests/: test_palette_extractor.py  test_palette_style_reference.py  test_palette_to_prompt_text.py  test_workflows.py
utils/: color_names.py  color_utils.py  extract.py  preview_utils.py
workflows/: palette_reference_workflow.json  showcase_01_palette_to_style_reference.json  showcase_02_mode_comparison.json  showcase_03_positive_vs_negative_strength.json  showcase_04_free_local_prompt_text.json
